--- a/style.css
+++ b/style.css
@@ -66,3 +66,15 @@ h1 {
   font-style: italic;
   font-family: cursive;
 }
+#myContainer {
+    width: 400px;
+    height: 400px;
+    position: relative;
+    background: yellow;
+}
+#myAnimation {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    background: red;
+}
