Full screen animation

--- a/style.css
+++ b/style.css
@@ -66,3 +66,11 @@ h1 {
   font-style: italic;
   font-family: cursive;
 }
+canvas {
+ outline: 0px;
+ position: absolute;
+ left: 0px;
+ top: 0px;
+ width: 100%;
+ height: 100%;
+}
